@@ -23,9 +23,10 @@
 
 int	SYSTEM_SWAP_SIZE(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
-	MEMORYSTATUSEX	ms_ex;
-	MEMORYSTATUS	ms;
-	char		*swapdev, *mode;
+	MEMORYSTATUSEX			ms_ex;
+	MEMORYSTATUS			ms;
+	zbx_uint64_t			real_swap_total, real_swap_avail;
+	char				*swapdev, *mode;
 
 	if (2 < request->nparam)
 		return SYSINFO_RET_FAIL;
@@ -37,34 +38,72 @@ int	SYSTEM_SWAP_SIZE(AGENT_REQUEST *request, AGENT_RESULT *result)
 	if (NULL != swapdev && '\0' != *swapdev && 0 != strcmp(swapdev, "all"))
 		return SYSINFO_RET_FAIL;
 
+	/***************************************************************************
+	 *                                                                         *
+	 * Due to the way Windows API functions report memory metrics,             *
+	 * it is impossible to accurately retrieve swap (virtual memory)           *
+	 * sizes as Windows either does not report them properly or                *
+	 * reports swap along with actual physical memory as page file             *
+	 * sizes. The only resolution that could be applied was calculatively      *
+	 * deducting the swap sizes knowing the page and physical memory           *
+	 * sizes.                                                                  *
+	 *                                                                         *
+	 * While developing this solution, it was found that in virtualized        *
+	 * environments Windows reports incorrect values for various memory        *
+	 * types. For example, the free memory size may be larger than the         *
+	 * total memory size of the system, or, under certain circumstances,       *
+	 * these functions may return negative values.                             *
+	 *                                                                         *
+	 * Taking these fallacious conditions into account, these calculations     *
+	 * guarantee that the available swap size is never larger than the total   *
+	 * available (if it is reported as such, it is lowered to the total        *
+	 * as there is a higher probability of that number staying consistent      *
+	 * than the other way around). In case of the system reporting negative    *
+	 * values, the appropriate metric is returned as 0.                        *
+	 *                                                                         *
+	 * The returned values are not guaranteed to be accurate and may report    *
+	 * inaccurate results which may depend on the system and environment.      *
+	 * In a proper system environment, this should logically work just as any  *
+	 * arithmetic calculation, but the problem lies within the way Windows     *
+	 * itself operates. Although this guestimate should work most of the time, *
+	 * there are no guarantees that it will.                                   *
+	 *                                                                         *
+	 ***************************************************************************/
+
 	if (NULL != zbx_GlobalMemoryStatusEx)
 	{
 		ms_ex.dwLength = sizeof(MEMORYSTATUSEX);
 
 		zbx_GlobalMemoryStatusEx(&ms_ex);
 
-		if (NULL == mode || '\0' == *mode || 0 == strcmp(mode, "total"))
-			SET_UI64_RESULT(result, ms_ex.ullTotalPageFile);
-		else if (0 == strcmp(mode, "free"))
-			SET_UI64_RESULT(result, ms_ex.ullAvailPageFile);
-		else if (0 == strcmp(mode, "used"))
-			SET_UI64_RESULT(result, ms_ex.ullTotalPageFile - ms_ex.ullAvailPageFile);
-		else
-			return SYSINFO_RET_FAIL;
+		real_swap_total = ms_ex.ullTotalPageFile > ms_ex.ullTotalPhys ?
+				ms_ex.ullTotalPageFile - ms_ex.ullTotalPhys : 0;
+		real_swap_avail = ms_ex.ullAvailPageFile > ms_ex.ullAvailPhys ?
+				ms_ex.ullAvailPageFile - ms_ex.ullAvailPhys : 0;
 	}
 	else
 	{
 		GlobalMemoryStatus(&ms);
 
-		if (NULL == mode || '\0' == *mode || 0 == strcmp(mode, "total"))
-			SET_UI64_RESULT(result, ms.dwTotalPageFile);
-		else if (0 == strcmp(mode, "free"))
-			SET_UI64_RESULT(result, ms.dwAvailPageFile);
-		else if (0 == strcmp(mode, "used"))
-			SET_UI64_RESULT(result, ms.dwTotalPageFile - ms.dwAvailPageFile);
-		else
-			return SYSINFO_RET_FAIL;
+		real_swap_total = ms.dwTotalPageFile > ms.dwTotalPhys ?
+				ms.dwTotalPageFile - ms.dwTotalPhys : 0;
+		real_swap_avail = ms.dwAvailPageFile > ms.dwAvailPhys ?
+				ms.dwAvailPageFile - ms.dwAvailPhys : 0;
 	}
+
+	if (real_swap_avail > real_swap_total)
+		real_swap_avail = real_swap_total;
+
+	if (NULL == mode || '\0' == *mode || 0 == strcmp(mode, "total"))
+		SET_UI64_RESULT(result, real_swap_total);
+	else if (0 == strcmp(mode, "free"))
+		SET_UI64_RESULT(result, real_swap_avail);
+	else if (0 == strcmp(mode, "pfree"))
+		SET_DBL_RESULT(result, (real_swap_avail / real_swap_total) * 100.0);
+	else if (0 == strcmp(mode, "used"))
+		SET_UI64_RESULT(result, real_swap_total - real_swap_avail);
+	else
+		return SYSINFO_RET_FAIL;
 
 	return SYSINFO_RET_OK;
 }
